--- a/web/res/css/homescreen.css
+++ b/web/res/css/homescreen.css
@@ -1,149 +1,163 @@
 body{
-	background-color:#087E8B;
-	background-image: url("/res/img/bgPadrao.jpg") ;
-	background-size: 100% ;
-	background-repeat: no-repeat;
-	
+	background-color:#C7C7C7;
+  font-family: "Segoe UI";
+
+
+
+
 }
-
-.carousel-inner .carousel-item{
-	width: 250px;
-	height: 250px;
-	max-width: 300px;
-	max-height: 300px;
-	object-fit:  cover;
-}
-.carousel-inner .carousel-item img{
-	margin-left: 250px;
-	width: 800px;
-	height: 250px;
-	object-fit: cover;
-}
-
-
-
-
 /* Navbar */
 .navbar{
-            background-color: #C1839F !important;
-           
-        }
-        .navbar .navbar-nav li a{
-            color: #FFF !important;
-        }
-        .navbar .nav-item .nav-link .active{
-            color:#FFF !important;
-        }
-        .navbar-brand{
-            color:#FFF !important;
-        }
 
-/*  Barra de busca  */
 
-.wrapBusca{
-	margin-top:35%;
 }
+.navbar .navbar-nav li a{
+  color: #95989A !important;
+  font-weight: 400;
+  padding-left: 50px !important;
 
-.barra_busca{
-	background-color: #FF5A5F;
-	border-radius: 20px;
-	margin-left: 15px;
-	color: #FFF;
 }
-
-
-.form-control{
-	border-radius: 20px !important;
-}
-
-.maisPopulares .header h1,h3{
-	color:white;
-	font-size:15px !important;
-	margin-left: 70%;
-	margin-top: 0vw;
+.navbar .navbar-nav li a:hover{
+  color: #363457 !important;
+  font-weight: 400;
+  padding-left: 50px !important;
+  transform: scale(1);
 
 }
 
-
-
+.navbar-brand{
+  color: #363457 !important;
+  font-size: 24px;
+  font-weight: 700;
+}
 a:link,a:visited {
 	color: #FFF;
 	margin-left: 
 }
-.rowLivros{
-	margin-left: 30%;
-	min-width: 50vw;
-	
+
+/*Generos */
+.produtosHome ul { 
+  margin: 150px auto 0; 
+  padding: 0; 
+  display: table;
+  width: 600px;
+  text-align: center;
+}
+.produtosHome li { 
+  display: table-cell; 
+  position: relative; 
+  padding: 10px 0;
+}
+.produtosHome a {
+  color: black;
+  text-decoration: none;
+  display: inline-block;
+  padding: 15px 20px;
+  position: relative;
+}
+.produtosHome h5{
+  color: black;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.produtosHome h2{
+  white-space: nowrap;
+  padding-right: 50%;
 }
 
-.card-deck{
-	position: relative;
-	min-height: 250px;
-	min-width: 250px;
-	
+
+form {
+  display:flex;
+  flex-direction:row;
+  border:1px solid grey;
+  border-radius: 10px;
+  padding:2px;
 }
 
-.header-populares {
-	align-items: center;
-	padding-bottom: 5px;
-	max-width: calc(100% - 30px);
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 2vh;
-	margin-top: 10vh;
-	display: inline-flex;
-	color: #FFF;
-
-
+input {
+  flex-grow:2;
 }
-
-.card .card-img-top .card-deck{
-
-	background-color: #fff;
-	border-radius: 10px;
-	min-width: 250px;
-	min-height: 200px;
-	max-width: 250px;
-	max-width: 300px;
-
-	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
-	/*padding-bottom: 48px;*/
-	
-	text-align: center;
-	
-}
-.card-deck{
-	padding-bottom: 10vh;
-}
-
-.card:focus, .card:hover {
-	box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.2);
-	transform: scale(1.1);
-}
-.container .mais-populares{
-	margin-bottom: 20px;
-}
-.header-populares-genero{
-	color: #fff
-}
-.botoes{
-	background-color: #FF5A5F;
-	border-radius:20px; 
-	border:0px;
-	/*border-color: #FF5A5F;*/
-}
-.botoes:hover{
-	background-color: #ff272e;
-	transform: scale(1); 
+.btnpesquisa {
+  
+  border:1px;
+  border-radius: 5px;  
+  background-color: #363457;
+  color:#FFF;
 }
 
 
 
 
+.produto-carrossel {
+  background: #333;
+  background-size: cover;
+background: linear-gradient(to right, rgba(0,0,0,0.51) 0%,rgba(0,0,0,0.4) 99%); 
+}
+.produto-carrossel .carousel-control {
+  width: 5%;
+}
+.card-produto-item a {
+  color: #147196;
+}
+.card-produto-item a:hover {
+  text-decoration: none;
+}
+.card-produto-item .plinha {
+  margin: 10px 0;
+  height: 1px;
+  background: #ccc;
+}
+@media all and (max-width: 768px) {
+  .card-produto-item {
+    margin-bottom: 30px;
+  }
+}
+.card-produto-foto {
+  text-align: center;
+  height: 180px;
+  background: #fff;
+}
+.card-produto-foto img {
+  height: 100%;
+  display: inline-block;
+}
+.card-produto-detalhes {
+  background: #f0f0f0;
+  padding: 15px;
+}
+.card-produto-nome h4 {
+  margin-top: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.card-produto-descricao {
+  color: #acacac;
+}
+.card-produto-descricao .active {
+  color: #FFB500;
+}
+.card-produto-preco {
+  font-size: 18px;
+}
+
+
+.btnPrincipal{
+  background-color: #363457;
+  color:#FFF;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.15);
+  margin-top: 5%;
+}
+
+
+/*.produto-desc ul { outline: solid 0.25rem hsla(210, 100%, 100%, 0.5); }
 
 
 
 
-.carousel{ outline: solid 0.25rem hsla(210, 100%, 100%, 0.5); }
+
+
+
+
 
 
