--- a/web/res/css/login.css
+++ b/web/res/css/login.css
@@ -1,11 +1,9 @@
+/*Copiar daqui */
 body{
   background-image: url(./res/img/BG.png) !important;
   font-family: "Segoe UI";
   background-color: #C7C7C7;
 }
-
-
-
 hr{
   width: 200px;
 }
@@ -33,6 +31,10 @@ a:link,a:visited {
 	color: black;
 	margin-left: 
 }
+
+/*Até aqui em páginas que tenham nav*/
+
+
 .container {
   background-color: #FFF;
   border-radius: 10px;
