--- a/web/res/css/cadastroProduto.css
+++ b/web/res/css/cadastroProduto.css
@@ -1,108 +1,95 @@
      nav{
-                background: #090446;
-            }
-            hr{
-                width: 200px;
-            }
-            .navbar .navbar-nav li a{
-                color: #FEB95F !important;
-                font-weight: 400;
-                padding-left: 50px !important;
+      background: #090446;
+    }
+    hr{
+      width: 200px;
+    }
+    .navbar .navbar-nav li a{
+      color: #FEB95F !important;
+      font-weight: 400;
+      padding-left: 50px !important;
 
 
-            }
-#link{
-	
-	 color:  #090446 !important;
+    }
+    *{font-size:100%;box-sizing:border-box;color:#95989A;;}
+
+    form{width:80%;margin:auto;margin-top:50px;}
+    table{border:1px solid transparent;border-top:none;padding:0;}
+    td {}
+    td input{margin:0;padding:0;}
+
+
+
+
+
+    input::-webkit-input-placeholder {
+     color: #95989A;
+   }
+   h1, h2, h3, h4{
+    color:#95989A;
+  }
+  body
+  {
+    background-color:#f5f5f5;
+  }
+  .imagePreview {
+    width: 100%;
+    height: 180px;
+    background-position: center center;
+    background:url(http://cliquecities.com/assets/no-image-e3699ae23f866f6cbdf8ba2443ee5c4e.jpg);
+    background-color:#fff;
+    background-size: cover;
+    background-repeat:no-repeat;
+    display: inline-block;
+    box-shadow:0px -3px 6px 2px rgba(0,0,0,0.2);
+  }
+  .btn-primary
+  {
+    display:block;
+    border-radius:0px;
+    box-shadow:0px 4px 6px 2px rgba(0,0,0,0.2);
+    margin-top:-5px;
+  }
+  .imgUp
+  {
+    margin-bottom:15px;
+  }
+  .del
+  {
+    position:absolute;
+    top:0px;
+    right:15px;
+    width:30px;
+    height:30px;
+    text-align:center;
+    line-height:30px;
+    background-color:rgba(255,255,255,0.6);
+    cursor:pointer;
+  }
+  .imgAdd
+  {
+    width:30px;
+    height:30px;
+    border-radius:50%;
+    background-color:#4bd7ef;
+    color:#fff;
+    box-shadow:0px 0px 2px 1px rgba(0,0,0,0.2);
+    text-align:center;
+    line-height:30px;
+    margin-top:0px;
+    cursor:pointer;
+    font-size:15px;
+  }
+  .btnSecundario{
+  background-color: #98A886;
+  color: #FFF;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.15);
+}
+.btnPrincipal{
+  background-color: #363457;
+  width: 150px;
+ 
+  margin-left: 30%;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.15);
 
 }
-
-
-            .navbar .navbar-nav li a:hover{
-                color: #FEB95F !important;
-                font-weight: 400;
-                padding-left: 50px !important;
-                transform: scale(1);
-
-
-            }
-            .navbar-brand{
-                color: #FEB95F !important;
-                font-size: 24px;
-                font-weight: 700;
-
-            }
-            #footer{
-                background: #090446;
-
-            }
-            #corAmarelo{
-                color:#FEB95F ;
-            }
-
-            #corBranca{
-                color: white;
-            }
-            #caixa2{
-                margin-top: 10%;
-                margin-left: 20%;
-                margin-bottom: 3%;
-                clear: both;
-
-            }
-
-            #container1{
-                width: 70%;
-                height: 800px;
-                margin:  0 auto;
-                margin-top: 4%;
-                margin-bottom: 7%;
-
-            }
-
-            .container1, .container2{
-                display: block;
-                float: left;
-                width: 40%;
-                height: 70%;
-                margin-left: 7%;
-                margin-bottom: 5%;
-                margin-top: 5%;
-
-            }
-
-            .dropdown1{
-                padding-top: 30px;
-                padding-right: 60px;
-                margin-left: 5%;
-
-
-            }
-
-            h1{
-				text-align: center;
-				color:  #090446;
-
-}
-
-
-
-            #botao{
-                clear: both;
-                margin-left: 15%;
-            }
-
-            #btnCad, #btnCanc{
-                margin-left: 10%;
-                width: 25%;
-            }
-
-            #texto{
-                font-size: 18px;
-                color: black;
-            }	
-            
-            #botao1 , .btn{
-                 background: #090446;
-                color: #FEB95F !important;
-            }
